# OpenGLExample

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  GLFWWindow.cpp  GLFWWindow.h  GLShader.cpp  GLShader.h  InputManager.cpp  InputManager.h  Light.cpp  Light.h  Mesh.cpp  Model.cpp  Model.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  UIManager.cpp  UIManager.h  Window.h  main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Light.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  Shader.h  Texture.cpp  Texture.h  main.cpp
src/input/: InputManager.cpp
src/rendering/: GLFWWindow.cpp  GLFWWindow.h  GLModel.cpp  GLModel.h  GLShader.cpp  GLShader.h  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
src/rendering/opengl/: GLFWWindow.cpp  GLFWWindow.h  GLModel.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  OpenGLRenderer.cpp  OpenGLResourceLoader.cpp  OpenGLResourceLoader.h
src/scene/: Scene.cpp  Scene.h
src/ui/: UIManager.cpp
